--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "antd": "^5.24.7",
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "react": "^19.0.0",
